<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".onboard_screen_two">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="357dp"
            android:layout_height="203dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imageView13"
            app:srcCompat="@drawable/logo" />

        <!-- Roam Easy Title -->
        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imageView14"
            app:srcCompat="@drawable/roameasy" />

        <!-- FrameLayout for Text on Top of Rectangle -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <!-- Background Rectangle -->
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="357dp"
                android:layout_height="134dp"
                android:contentDescription="@string/imageView10"
                app:srcCompat="@drawable/textrectangle" />

            <!-- Centered Text -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.02"
                android:lineHeight="24dp"
                android:padding="20dp"
                android:text="@string/textView"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorLink="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <!-- Already have an account? -->
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/tv_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- Next Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/btn_signup"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
