<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- FrameLayout with constraints -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Background Image (Full Screen) -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageView"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/backgroundfirst" />

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="224dp"
            android:layout_height="205dp"
            android:layout_gravity="center"
            android:layout_marginBottom="180dp"
            android:contentDescription="@string/imageView2"
            app:srcCompat="@drawable/logo" />

        <!-- TitleTwo Image -->
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/imageView5"
            app:srcCompat="@drawable/titletwo" />

        <!-- RoamEasy Button (Image as Button) -->
        <ImageButton
            android:id="@+id/launchbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/launchbtn"
            android:focusable="true"
            app:srcCompat="@drawable/roameasy" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
